# light_c

./: .gitmodules  CMakeLists.txt  README.md
light/: CMakeLists.txt
light/include/: app.h  binding.h  debug.h  log.h  manager.h  occ.h  render.h  system.h
light/sources/: app.c  log.c  main.c  render.c  system.c
